--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "discord": "^0.8.2",
         "discord.js": "^14.16.3",
         "dotenv": "^16.4.5",
-        "nodemon": "^3.1.9"
+        "nodemon": "^3.1.9",
+        "puppeteer": "^24.0.0"
     }
 }
