--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "install": "npx playwright install",
+        "install": "npx playwright install --with-deps",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
