--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "install": "npx playwright install --with-deps",
-        "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "npx playwright install --with-deps && apt-get update && apt-get install -y wget unzip libc6=2.31-13+deb11u6 libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libxcomposite1 libxrandr2 libasound2 libpangocairo-1.0-0 libpango-1.0-0 libgbm1 libxdamage1 libxshmfence1 libegl1 libx11-xcb1 libxfixes3 libxcb-dri3-0 libdrm2 libxrender1",
+    "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
