--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-    "install": "npx playwright install --with-deps && apt-get install gawk bison -y && wget -c https://ftp.gnu.org/gnu/glibc/glibc-2.39.tar.gz && tar -zxvf glibc-2.39.tar.gz && cd glibc-2.39 && mkdir glibc-build && cd glibc-build && ../configure --prefix=/opt/glibc-2.39 && make && make install ",
+    "install": "npx playwright install --with-deps && apt-get install gawk bison -y && apt-get install -y wget && wget -c https://ftp.gnu.org/gnu/glibc/glibc-2.39.tar.gz && tar -zxvf glibc-2.39.tar.gz && cd glibc-2.39 && mkdir glibc-build && cd glibc-build && ../configure --prefix=/opt/glibc-2.39 && make && make install ",
     "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
